--- a/docs/static/prism.css
+++ b/docs/static/prism.css
@@ -1,1 +1,87 @@
-::-webkit-scrollbar{width:6px;height:6px;}::-webkit-scrollbar-thumb{background-color:#CCCCCC;}::-webkit-scrollbar-thumb:hover{background-color:#999999;}::-webkit-scrollbar-thumb:active{background-color:#CCCCCC;}code[class*="language-"], pre[class*="language-"] {color: #657b83;font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;font-size: 1em;text-align: left;white-space: pre;word-spacing: normal;word-break: normal;word-wrap: normal;line-height: 1.5;-moz-tab-size: 4;-o-tab-size: 4;tab-size: 4;-webkit-hyphens: none;-moz-hyphens: none;-ms-hyphens: none;hyphens: none;}pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection, code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {background: #073642;}pre[class*="language-"]::selection, pre[class*="language-"] ::selection, code[class*="language-"]::selection, code[class*="language-"] ::selection {background: #073642;}pre[class*="language-"] {padding: 1em;margin: .5em 0;overflow: auto;border-radius: 0.3em;}:not(pre) > code[class*="language-"], pre[class*="language-"] {background-color: #fdf6e3;}:not(pre) > code[class*="language-"] {padding: .1em;border-radius: .3em;}.token.comment, .token.prolog, .token.doctype, .token.cdata {color: #93a1a1;}.token.punctuation {color: #586e75;}.token.namespace {opacity: .7;}.token.property, .token.tag, .token.boolean, .token.number, .token.constant, .token.symbol, .token.deleted {color: #268bd2;}.token.selector, .token.attr-name, .token.string, .token.char, .token.builtin, .token.url, .token.inserted {color: #2aa198;}.token.entity {color: #657b83;background: #eee8d5;}.token.atrule, .token.attr-value, .token.keyword {color: #859900;}.token.function, .token.class-name {color: #b58900;}.token.regex, .token.important, .token.variable {color: #cb4b16;}.token.important, .token.bold {font-weight: bold;}.token.italic {font-style: italic;}.token.entity {cursor: help;}
+::-webkit-scrollbar {
+  width : 6px;
+  height : 6px;
+}::-webkit-scrollbar-thumb {
+  background-color : #CCCCCC;
+}::-webkit-scrollbar-thumb:hover {
+  background-color : #999999;
+}::-webkit-scrollbar-thumb:active {
+  background-color : #CCCCCC;
+}code[class*='language-'], pre[class*='language-'] {
+  color : #657B83;
+  font-family : Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+  font-size : 1em;
+  text-align : left;
+  white-space : pre;
+  word-spacing : normal;
+  word-break : normal;
+  word-wrap : normal;
+  line-height : 1.5;
+  -moz-tab-size : 4;
+  -o-tab-size : 4;
+  tab-size : 4;
+  -webkit-hyphens : none;
+  -moz-hyphens : none;
+  -ms-hyphens : none;
+  hyphens : none;
+}pre[class*='language-']::-moz-selection, pre[class*='language-'] ::-moz-selection, code[class*='language-']::-moz-selection, code[class*='language-'] ::-moz-selection {
+  background : #073642;
+}pre[class*='language-']::selection, pre[class*='language-'] ::selection, code[class*='language-']::selection, code[class*='language-'] ::selection {
+  background : #073642;
+}pre[class*='language-'] {
+  padding : 1em;
+  margin : .5em 0;
+  overflow : auto;
+  border-radius : .3em;
+}:not(pre) > code[class*='language-'], pre[class*='language-'] {
+  background-color : #FDF6E3;
+}:not(pre) > code[class*='language-'] {
+  padding : .1em;
+  border-radius : .3em;
+}.token.comment, .token.prolog, .token.doctype, .token.cdata {
+  color : #93A1A1;
+}.token.punctuation {
+  color : #586E75;
+}.token.namespace {
+  opacity : .7;
+}.token.property, .token.tag, .token.boolean, .token.number, .token.constant, .token.symbol, .token.deleted {
+  color : #268BD2;
+}.token.selector, .token.attr-name, .token.string, .token.char, .token.builtin, .token.url, .token.inserted {
+  color : #2AA198;
+}.token.entity {
+  color : #657B83;
+  background : #EEE8D5;
+}.token.atrule, .token.attr-value, .token.keyword {
+  color : #859900;
+}.token.function, .token.class-name {
+  color : #B58900;
+}.token.regex, .token.important, .token.variable {
+  color : #CB4B16;
+}.token.important, .token.bold {
+  font-weight : bold;
+}.token.italic {
+  font-style : italic;
+}.token.entity {
+  cursor : help;
+}
+div[data-tip]:hover:after {
+  content : attr(data-tip);
+  position : absolute;
+  top : 0;
+  display : none;
+  left : 100%;
+  font-size : 13px;
+  width : 100%;
+  opacity : .9;
+  border-radius : 0 10px 5px 0;
+  background : #FFFFFF;
+  box-shadow : 0 0 0 1px;
+  text-align : center;
+  color : #009768;
+  padding : 2px;
+}
+@media (min-width: 1024px) {
+  div[data-tip]:hover:after {
+    display : block;
+  }
+}
